package letstrans

type ServiceGroup struct {
	FileService
	ProjectService
	GlossaryService
	ThirdPartyService
	TranslateMemoryService
	TranslateBasisService
}
