package letstrans

import "time"

// GlossaryService 定义术语库服务结构体
type GlossaryService struct{}

// Glossary 定义术语库结构体
type Glossary struct {
	ID        string    `json:"id"`
	CreatedAt time.Time `json:"created_at"`
	UpdatedAt time.Time `json:"updated_at"`
	Comment   string    `json:"comment"`
	Author    string    `json:"author"`
	Name      string    `json:"name"`
}

// GetGlossaries 获取术语库列表
func (gs *GlossaryService) GetGlossaries() ([]Glossary, error) {
	// 实现获取术语库列表的逻辑
	return []Glossary{}, nil
}

// CreateGlossary 创建术语库
func (gs *GlossaryService) CreateGlossary(comment, author, name string) (Glossary, error) {
	// 实现创建术语库的逻辑
	return Glossary{}, nil
}

// GetGlossaryTerms 查询术语库中所有的术语
func (gs *GlossaryService) GetGlossaryTerms(glossaryID string) (Glossary, []Term, error) {
	// 实现查询术语库中所有术语的逻辑
	return Glossary{}, []Term{}, nil
}

// UpdateTerm 修改术语
func (gs *GlossaryService) UpdateTerm(termID string, term Term) (Glossary, []Term, error) {
	// 实现修改术语的逻辑
	return Glossary{}, []Term{}, nil
}

// CreateTerm 创建术语
func (gs *GlossaryService) CreateTerm(termID string, term Term) (Glossary, []Term, error) {
	// 实现创建术语的逻辑
	return Glossary{}, []Term{}, nil
}

// SuggestTerms 根据文本内容查询相关术语
func (gs *GlossaryService) SuggestTerms(sourceText string) ([]Term, error) {
	// 实现根据文本内容查询相关术语的逻辑
	return []Term{}, nil
}
