package letstrans

import "time"

// ProjectService 定义项目服务结构体
type ProjectService struct{}

// Project 定义项目结构体
type Project struct {
	ID         string    `json:"id"`
	CreatedAt  time.Time `json:"created_at"`
	UpdatedAt  time.Time `json:"updated_at"`
	SourceLang string    `json:"source_lang"`
	TargetLang string    `json:"target_lang"`
	Name       string    `json:"name"`
	Progress   float64   `json:"progress"`
	Deadline   time.Time `json:"deadline"`
	Comment    string    `json:"comment"`
}

// Document 定义文档结构体
type Document struct {
	ID         string    `json:"id"`
	CreatedAt  time.Time `json:"created_at"`
	UpdatedAt  time.Time `json:"updated_at"`
	SourceLang string    `json:"source_lang"`
	TargetLang string    `json:"target_lang"`
	Name       string    `json:"name"`
	Progress   float64   `json:"progress"`
	FileType   string    `json:"filetype"`
	Author     string    `json:"author"`
}

// CreateProject 创建项目
func (ps *ProjectService) CreateProject(project Project) (Project, error) {
	// 实现创建项目的逻辑
	return Project{}, nil
}

// GetProjects 获取项目列表
func (ps *ProjectService) GetProjects() ([]Project, error) {
	// 实现获取项目列表的逻辑
	return []Project{}, nil
}

// GetProjectDetails 获取项目的详细信息
func (ps *ProjectService) GetProjectDetails(projectID string) (Project, []Document, error) {
	// 实现获取项目详细信息的逻辑
	return Project{}, []Document{}, nil
}

// UpdateProject 更新项目信息
func (ps *ProjectService) UpdateProject(projectID string, project Project) (Project, error) {
	// 实现更新项目信息的逻辑
	return Project{}, nil
}

// DeleteProjects 批量删除项目
func (ps *ProjectService) DeleteProjects(projectIDs []string) error {
	// 实现批量删除项目的逻辑
	return nil
}

// AddFilesToProject 向某一个项目中添加文件
func (ps *ProjectService) AddFilesToProject(projectID string, fileIDs []string) ([]Document, error) {
	// 实现向项目中添加文件的逻辑
	return []Document{}, nil
}

// RemoveFilesFromProject 从项目中删除文件
func (ps *ProjectService) RemoveFilesFromProject(projectID string, fileIDs []string) error {
	// 实现从项目中删除文件的逻辑
	return nil
}

// DownloadFiles 批量下载文件
func (ps *ProjectService) DownloadFiles(projectID string, documentIDs []string, fileType string) (string, error) {
	// 实现批量下载文件的逻辑
	return "", nil
}
