package letstrans

// ThirdPartyService 定义第三方服务结构体
type ThirdPartyService struct{}

// CommonResponse 定义通用响应结构体
type CommonResponse struct {
	Code int         `json:"code"`
	Msg  string      `json:"msg"`
	Data interface{} `json:"data"`
}

// MachineTranslate 批量进行机器翻译，将翻译结果存入数据库
func (tps *ThirdPartyService) MachineTranslate(documentIDs []string, segmentIDs []string, engine string) (CommonResponse, error) {
	// 实现批量进行机器翻译的逻辑
	return CommonResponse{}, nil
}

// GetSupportedEngines 获取支持的翻译引擎信息
func (tps *ThirdPartyService) GetSupportedEngines() (CommonResponse, error) {
	// 实现获取支持的翻译引擎信息的逻辑
	return CommonResponse{}, nil
}
