package letstrans

// TranslateMemoryService 定义翻译记忆库服务结构体
type TranslateMemoryService struct{}

// GetMemories 获取记忆库列表
func (tms *TranslateMemoryService) GetMemories() ([]TMTrans, error) {
	// 实现获取记忆库列表的逻辑
	return []TMTrans{}, nil
}

// SuggestMemories 根据文本内容获取建议
func (tms *TranslateMemoryService) SuggestMemories(sourceText string) ([]TMTrans, error) {
	// 实现根据文本内容获取建议的逻辑
	return []TMTrans{}, nil
}
